--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>{{ app_name }}</title>
+  <title>Eden</title>
   <meta name="description" content="Simple, work messaging tool.">
   <link rel="apple-touch-icon" sizes="180x180" href="{{ apple_touch_icon }}">
   <link rel="icon" type="image/png" href="{{ icon_96 }}" sizes="96x96" />
@@ -17,7 +17,7 @@
   <meta name="apple-itunes-app" content="app-id=6741682327, app-argument={{sitename}}">
 
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-title" content="{{ app_name }} | Eden AI" />
+  <meta name="apple-mobile-web-app-title" content="Eden | Eden AI" />
   <meta name="apple-touch-fullscreen" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="screen-orientation" content="portrait">
